Remove unused classes

--- a/DotaCounterPicker.Server/DotaCounterPicker.Server.csproj
+++ b/DotaCounterPicker.Server/DotaCounterPicker.Server.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\DotaCounterPicker.Services\DotaCounterPicker.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+  </ItemGroup>
+
 </Project>
