Updated to .net8 and libs

--- a/DotaCounterPicker.Server/appsettings.Development.json
+++ b/DotaCounterPicker.Server/appsettings.Development.json
@@ -5,5 +5,14 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "PostgresDatabaseOptions": {
+    "Host": "localhost",
+    "Name": "market-products",
+    "User": "postgres",
+    "Password": "admin",
+    "Port": 5432,
+    "MinPoolSize": 0,
+    "MaxPoolSize": 0
   }
 }
