--- a/DotaCounterPicker.Data/DotaCounterPicker.Data.csproj
+++ b/DotaCounterPicker.Data/DotaCounterPicker.Data.csproj
@@ -1,13 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="HtmlAgilityPack" Version="1.11.62" />
-  </ItemGroup>
 
 </Project>
