--- a/DotaCounterPicker.Server/appsettings.Development.json
+++ b/DotaCounterPicker.Server/appsettings.Development.json
@@ -8,7 +8,7 @@
   },
   "PostgresDatabaseOptions": {
     "Host": "localhost",
-    "Name": "market-products",
+    "Name": "DotaHeroes",
     "User": "postgres",
     "Password": "admin",
     "Port": 5432,
