--- a/DotaCounterPicker.Server/DotaCounterPicker.Server.csproj
+++ b/DotaCounterPicker.Server/DotaCounterPicker.Server.csproj
@@ -7,16 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Data\**" />
+    <Content Remove="Data\**" />
+    <EmbeddedResource Remove="Data\**" />
+    <None Remove="Data\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Blazored.Modal" Version="7.3.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\DotaCounterPicker.Core\DotaCounterPicker.Core.csproj" />
+    <ProjectReference Include="..\DotaCounterPicker.Data\DotaCounterPicker.Data.csproj" />
     <ProjectReference Include="..\DotaCounterPicker.Services\DotaCounterPicker.Services.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Data\" />
   </ItemGroup>
 
 </Project>
